src/main/webapp/css/table-style.css
/*table {
    box-shadow: 0 0 5px rgba(0, 0, 0, .5);;
}*/
.panel-body {
    padding: 0;
}
.panel-heading div {
    font-size: 15px;
}
.panel-heading div span{
    margin-left:5px;
}
.clickable{
    cursor: pointer;
    color: white;
}
.clickable:hover {
    -webkit-transition: color 0.2s;
    -moz-transition: color 0.2s;
    -o-transition: color 0.2s;
    transition: color 0.2s;
    text-decoration: none;
    color: #dddddd;
}
.search {
    display: inline-block;
    width: auto;
    margin-top: -5px;
    height: 28px;
    margin-right: -10px;
}
.checkbox-td {
    width: 10px;
}
.scroll {
    overflow-x: auto;
}
.table {
    margin-bottom: 0;
    font-size: 13px;
}
.panel-title {
    font-size: 20px;
    margin-left: -15px;
}

